Fixed REPL input alignment.

--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -12,16 +12,18 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: baseline;
 }
 
 .repl-input-controls .prompt {
-    padding-right: 10px;
+    padding-right: 5px;
     flex-grow: 0;
 }
 
 .repl-input-controls input {
     flex-grow: 1;
     border: none;
+    padding: 0 5px;
 }
 
 .repl-input-controls input:focus {
